--- a/HelpDesk/staff/templates/manager/ProblemDetail.html
+++ b/HelpDesk/staff/templates/manager/ProblemDetail.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chi tiết sự cố</title>
+    {% load static %}
+    <script src="{% static 'js/jquery-3.5.0.min.js' %}"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.7.4/firebase.js"></script>
+    <script src="{% static 'js/firebase_config.js' %}"></script>
 </head>
 <body>
     <button>
@@ -40,100 +44,22 @@
             Đã hoàn thành
         {% endif %}
     </p><hr>
+    <input type="hidden" id="status" value="{{ problem.status }}">
     
     <h2>Phản hồi</h2>
     <div id="replies"></div><hr>
+    <input type="hidden" name="problem_key" id="problem_key" value="{{ problem_key }}">
 
-    <form action="{% url 'Post_reply' %}" method="post" id="postReplyForm">
-        {% csrf_token %}
-        <input type="hidden" name="problem_key" id="problem_key" value="{{ problem_key }}">
+    <label for="content">Nội dung</label><br>
+    <textarea name="content" id="content" cols="45" rows="3" required></textarea><br><br>
 
-        <label for="content">Nội dung</label><br>
-        <textarea name="content" id="content" cols="45" rows="3" required></textarea><br><br>
+    <label for="image">Chọn ảnh</label>
+    <input type="file" name="image" id="image">
+    <input type="hidden" name="image_url" id="image_url" value=""><br><br>
 
-        <label for="image">Chọn ảnh</label>
-        <input type="file" name="image" id="image">
-        <input type="hidden" name="image_url" id="image_url" value=""><br><br>
+    <input type="button" value="Gửi phản hồi" id="guiPhanHoiBtn">
+    <input type="button" value="Làm lại" onclick="ResetReply()">
 
-        <input type="button" value="Gửi phản hồi" id="guiPhanHoiBtn">
-        <input type="reset" value="Làm lại">
-    </form>
+    <script src="{% static 'js/manager/ProblemDetail.js' %}"></script>
 </body>
-<script src="https://www.gstatic.com/firebasejs/3.7.4/firebase.js"></script>
-<script>
-    var firebaseConfig = {
-        "apiKey": "AIzaSyC22V25o9VKeIPEAVFBfgvguv_C5dlWzn4",
-        "authDomain": "help-desk-12c4d.firebaseapp.com",
-        "databaseURL": "https://help-desk-12c4d.firebaseio.com",
-        "projectId": "help-desk-12c4d",
-        "storageBucket": "help-desk-12c4d.appspot.com",
-        "messagingSenderId": "137334382999",
-        "appId": "1:137334382999:web:73f716f1b85c76f1c724d2",
-        "measurementId": "G-R11CH76CNH"
-    }
-    firebase.initializeApp(firebaseConfig)
-
-    var dsUser = [];
-    users = firebase.database().ref("users").once("value", function(snapshot) {
-        users = snapshot.val()
-        for(key in users)
-        {
-            dsUser[key] = users[key].name;
-        }   
-    });
-
-    problem_key = document.getElementById("problem_key").value;
-    data_reply = firebase.database().ref("replies").orderByChild("problem").equalTo(problem_key);
-    data_reply.on("value", function(snapshot) {
-        replies = snapshot.val();
-        str = "";
-        for(key in replies)
-        {
-            str += "<div style='border: 1px dashed gray; margin: 4px 0px 4px 0px; padding-left: 6px'>";
-                str += "<p>";
-                    str += "<strong>"+ dsUser[replies[key].user_create] +"</strong>";
-                    str += " <em>"+ replies[key].time +"</em>";
-                str += "</p>";
-                str += "<p>"+ replies[key].content +"</p>";
-                if(replies[key].image_url != "")
-                {
-                    str += "<img src='"+ replies[key].image_url +"' style='height: 80px'>";
-                }                
-            str += "</div>";
-        }
-        document.getElementById("replies").innerHTML = str;
-    });
-
-    document.getElementById("guiPhanHoiBtn").onclick = function() 
-    {
-        file = document.getElementById("image").files[0];
-        if(file != undefined)
-        {
-            d = new Date();
-            now = d.toISOString()
-
-            storage = firebase.storage();
-            storageRef = storage.ref();
-            thisRef = storageRef.child(now).put(file);
-
-            thisRef.on("state_changed", function(snapshot) {
-                console.log("Upload file successful");
-            },
-            function(error) {
-
-            },
-            function() {
-                //Download url of file
-                thisRef.snapshot.ref.getDownloadURL().then(function(downloadURL) {
-                    document.getElementById("image_url").value = downloadURL;
-                    document.getElementById("postReplyForm").submit();
-                })
-            })
-        }
-        else
-        {
-            document.getElementById("postReplyForm").submit();
-        }
-    }
-</script>
 </html>
