--- a/HelpDesk/staff/templates/technician/Index.html
+++ b/HelpDesk/staff/templates/technician/Index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trang chủ</title>
+    {% load static %}
+    <script src="https://www.gstatic.com/firebasejs/3.7.4/firebase.js"></script>
+    <script src="{% static 'js/firebase_config.js' %}"></script>
 </head>
 <body>
     <h2>Đây là trang chủ</h2>
@@ -11,11 +14,9 @@
     <button><a href="..{% url 'Logout' %}">Đăng xuất</a></button><br><br>
 
     <input type="hidden" name="user" id="user" value="{{ user }}">
-    <input type="hidden" name="workKey" id="workKey" value="">
 
     <h3>Danh sách công việc</h3>
     <div id="works"></div>
-    <button id="showWorkDetail" disabled>Xem chi tiết công việc</button>
 
     <h3>Danh sách các công việc đã được giải quyết</h3>
     <div id="solutions"></div>
@@ -23,91 +24,6 @@
     <h3>Danh sách FAQ</h3>
     <div id="faqs"></div>
 
+    <script src="{% static 'js/technician/Index.js' %}"></script>
 </body>
-<script src="https://www.gstatic.com/firebasejs/3.7.4/firebase.js"></script>
-<script>
-    var firebaseConfig = {
-        "apiKey": "AIzaSyC22V25o9VKeIPEAVFBfgvguv_C5dlWzn4",
-        "authDomain": "help-desk-12c4d.firebaseapp.com",
-        "databaseURL": "https://help-desk-12c4d.firebaseio.com",
-        "projectId": "help-desk-12c4d",
-        "storageBucket": "help-desk-12c4d.appspot.com",
-        "messagingSenderId": "137334382999",
-        "appId": "1:137334382999:web:73f716f1b85c76f1c724d2",
-        "measurementId": "G-R11CH76CNH"
-    }
-    firebase.initializeApp(firebaseConfig)
-
-    user = document.getElementById("user").value;
-    var data = firebase.database().ref("works").orderByChild("user_fix").equalTo(user);
-    data.on("value", function(snapshot) {
-        works = snapshot.val();
-        str = "<table border='1'>";
-            str += "<tr>";
-                str += "<th>work_name</th>";
-                str += "<th>deadline</th>";
-                str += "<th>status</th>";
-            str += "</tr>";
-            for(x in works) {
-                str += "<tr onclick='ChooseWork(\""+ x +"\")'>";
-                    str += "<td>"+ works[x].work_name +"</td>";
-                    str += "<td>"+ works[x].deadline +"</td>";
-                    str += "<td>"+ works[x].status +"</td>";
-                str += "</tr>";
-            }
-        str += "</table>";
-        document.getElementById("works").innerHTML = str;
-    });
-
-    var data_solution = firebase.database().ref("solutions").orderByChild("user_fix").equalTo(user);
-    data_solution.once("value", function(snapshot) {
-        solutions = snapshot.val();
-        str = "<table border='1'>";
-            str += "<tr>";
-                str += "<th>work</th>";
-                str += "<th>content</th>";
-                str += "<th>time_fix</th>";
-            str += "</tr>";
-            for(x in solutions) {
-                str += "<tr>";
-                    firebase.database().ref("works").child(solutions[x].work).once("value", function(snapshot) {
-                        work_name = snapshot.val().work_name;
-                        str += "<td>"+ work_name +"</td>";
-                    });
-                    str += "<td>"+ solutions[x].content +"</td>";
-                    str += "<td>"+ solutions[x].time_fix +"</td>";
-                str += "</tr>";
-            }
-        str += "</table>";
-        document.getElementById("solutions").innerHTML = str;
-    });
-
-    var data_faq = firebase.database().ref("faqs");
-    data_faq.once("value", function(snapshot) {
-        faqs = snapshot.val();
-        str = "<table border='1'>";
-            str += "<tr>";
-                str += "<th>question</th>";
-                str += "<th>answer</th>";
-            str += "</tr>";
-            for(x in faqs) {
-                str += "<tr>";
-                    str += "<td>"+ faqs[x].question +"</td>";
-                    str += "<td>"+ faqs[x].answer +"</td>";
-                str += "</tr>";
-            }
-        str += "</table>";
-        document.getElementById("faqs").innerHTML = str;
-    });
-
-    function ChooseWork(key) {
-        document.getElementById("workKey").value = key;
-        document.getElementById("showWorkDetail").disabled = false;
-    }
-
-    document.getElementById("showWorkDetail").onclick = function() {
-        key = document.getElementById("workKey").value;
-        window.location.href = "WorkDetail/"+ key;
-    }
-</script>
 </html>
