--- a/HelpDesk/staff/templates/technician/Index.html
+++ b/HelpDesk/staff/templates/technician/Index.html
@@ -6,12 +6,12 @@
     <title>Trang chủ</title>
     {% load static %}
     <script src="https://www.gstatic.com/firebasejs/3.7.4/firebase.js"></script>
-    <script src="{% static 'js/firebase_config.js' %}"></script>
+    <script src="{% static 'layout/js/firebase_config.js' %}"></script>
 </head>
 <body>
     <h2>Đây là trang chủ</h2>
     <h4>Chào kỹ thuật viên {{ name }}</h4>
-    <button><a href="..{% url 'Logout' %}">Đăng xuất</a></button><br><br>
+    <button><a href="{% url 'manager:Logout' %}">Đăng xuất</a></button><br><br>
 
     <input type="hidden" name="user" id="user" value="{{ user }}">
 
@@ -24,6 +24,6 @@
     <h3>Danh sách FAQ</h3>
     <div id="faqs"></div>
 
-    <script src="{% static 'js/technician/Index.js' %}"></script>
+    <script src="{% static 'technician/js/Index.js' %}"></script>
 </body>
 </html>
