--- a/HelpDesk/staff/templates/manager/ProblemDetail.html
+++ b/HelpDesk/staff/templates/manager/ProblemDetail.html
@@ -1,65 +1,101 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chi tiết sự cố</title>
-    {% load static %}
+{% extends 'manager/layout/Base.html' %}
+
+{% block title %}Chi tiết sự cố{% endblock %}
+
+{% load static %}
+
+{% block linkHead %}
     <script src="{% static 'layout/js/jquery-3.5.0.min.js' %}"></script>
     <script src="https://www.gstatic.com/firebasejs/3.7.4/firebase.js"></script>
     <script src="{% static 'layout/js/firebase_config.js' %}"></script>
-</head>
-<body>
-    <button>
-        {% if position_currently == "staff" %}
-            <a href="{% url 'staff:Get_index' %}">
-        {% elif position_currently == "manager" %}
-            <a href="{% url 'manager:Get_index' %}">
-        {% elif position_currently == "technician" %}
-            <a href="{% url 'technician:Get_index' %}">
-        {% endif %}
-        Trang chủ</a>
-    </button>
-    
-    <h2>Chi tiết sự cố</h2>
-    <h3>Thông tin người tạo sự cố</h3>
-    <p>Họ tên: {{ user.name }}</p>
-    <p>Email: {{ user.email }}</p>
 
-    <h3>Thông tin sự cố</h3>
-    <p>Nội dung sự cố: {{ problem.content }}</p>
-    <p>Hình ảnh sự cố: 
-        {% if problem.image_url != "" %}
-            <img src="{{ problem.image_url }}" style="height: 200px">
-        {% endif %}
-    </p>
-    <p>Trạng thái sự cố: 
-        {% if problem.status == "0" %}
-            Đã gửi
-        {% elif problem.status == "1" %}
-            Đang điều tra
-        {% elif problem.status == "2" %}
-            Chờ duyệt
-        {% elif problem.status == "3" %}
-            Đã hoàn thành
-        {% endif %}
-    </p><hr>
+    <link rel="stylesheet" href="{% static 'manager/css/ChiTietSuCo.css' %}">
+    <link rel="stylesheet" href="{% static 'layout/css/ZoomImage.css' %}">
+{% endblock %}
+
+{% block content %}
+    <div class="title">Chi tiết sự cố</div>
+    <table border="1" id="userCreate">
+        <tr>
+            <th colspan="2" class="sectionTitle">Thông tin người tạo sự cố</th>
+        </tr>
+        <tr>
+            <td>Họ tên</td>
+            <td>{{ user.name }}</td>
+        </tr>
+        <tr>
+            <td>Email</td>
+            <td>{{ user.email }}</td>
+        </tr>
+    </table>
+
+    <table border="1" id="problemDetail">
+        <tr>
+            <th colspan="2" class="sectionTitle">Thông tin sự cố</th>
+        </tr>
+        <tr>
+            <td>Nội dung sự cố</td>
+            <td>{{ problem.content }}</td>
+        </tr>
+        <tr>
+            <td>Trạng thái sự cố</td>
+            <td>
+                {% if problem.status == "0" %}
+                    Đã gửi
+                {% elif problem.status == "1" %}
+                    Đang điều tra
+                {% elif problem.status == "2" %}
+                    Chờ duyệt
+                {% elif problem.status == "3" %}
+                    Đã hoàn thành
+                {% endif %}
+            </td>
+        </tr>
+        <tr>
+            <td>Hình ảnh sự cố</td>
+            <td>
+                {% if problem.image_url != "" %}
+                    <img src="{{ problem.image_url }}" alt="Ảnh sự cố">
+                {% endif %}
+            </td>
+        </tr>
+    </table>
+
     <input type="hidden" id="status" value="{{ problem.status }}">
-    
-    <h2>Phản hồi</h2>
-    <div id="replies"></div><hr>
-    <input type="hidden" name="problem_key" id="problem_key" value="{{ problem_key }}">
 
-    <label for="content">Nội dung</label><br>
-    <textarea name="content" id="content" cols="45" rows="3" required></textarea><br><br>
+    <div class="borderBetweenInfoAndFeedBack"></div>
+    <div class="feedbacks">
+        <div class="title">Phản hồi</div>
+        <div id="replies"></div>   
+    </div>
 
-    <label for="image">Chọn ảnh</label>
-    <input type="file" name="image" id="image">
-    <input type="hidden" name="image_url" id="image_url" value=""><br><br>
+    <div id="zoomImage">
+        <img src="" alt="" id="imageNeedZoom">
+        <div class="closeImageBtn">
+            <span onclick="CloseImage()">X</span>
+        </div>
+    </div>
 
-    <input type="button" value="Gửi phản hồi" id="guiPhanHoiBtn">
-    <input type="button" value="Làm lại" onclick="ResetReply()">
+    <div class="borderBetweenInfoAndFeedBack"></div>
+    <div class="title">Gửi phản hồi</div>
+    <div class="createFeedbackForm">
+        <form>
+            <input type="hidden" name="problem_key" id="problem_key" value="{{ problem_key }}">
 
+            <label for="content">Nội dung</label><br>
+            <textarea name="content" id="content" cols="60" rows="6" required></textarea><br>
+
+            <label for="image">Chọn ảnh (nếu có):</label>
+            <input type="file" name="image" id="image">
+            <input type="hidden" name="image_url" id="image_url" value=""><br>
+
+            <input type="button" value="Gửi" id="createFeedbackBtn">
+            <input type="button" value="Làm lại" onclick="ResetReply()" id="resetBtn">
+        </form>
+    </div>
+{% endblock %}
+
+{% block script %}
     <script src="{% static 'manager/js/ProblemDetail.js' %}"></script>
-</body>
-</html>
+    <script src="{% static 'layout/js/ZoomImage.js' %}"></script>
+{% endblock %}
