--- a/HelpDesk/staff/templates/manager/layout/Base.html
+++ b/HelpDesk/staff/templates/manager/layout/Base.html
@@ -9,7 +9,16 @@
     {% block linkHead %}{% endblock %}
 </head>
 <body>
-    <h3 class="logoTitle"><a href="{% url 'manager:Get_index' %}"></a>Helpdesk</h3>
+    <h3>
+        {% if position_currently == "staff" %}
+            <a href="{% url 'staff:Get_index' %}" class="logoTitle">Helpdesk</a>
+        {% elif position_currently == "manager" %}
+            <a href="{% url 'manager:Get_index' %}" class="logoTitle">Helpdesk</a>
+        {% elif position_currently == "technician" %}
+            <a href="{% url 'technician:Get_index' %}" class="logoTitle">Helpdesk</a>
+        {% endif %}
+        <!-- Helpdesk</a> -->
+    </h3>
     <div class="navi">
         <a href="{% url 'manager:Get_create_account' %}" class="navi-item">TẠO TÀI KHOẢN</a>
         <a href="{% url 'manager:Get_create_faq' %}" class="navi-item">TẠO FAQ</a>
