Xong 5 giao diện cuối tạo tài khoản, tạo và sửa FAQ, tạo và sửa công việc, dùng thêm session position_currently

--- a/HelpDesk/staff/static/layout/css/Navi.css
+++ b/HelpDesk/staff/static/layout/css/Navi.css
@@ -29,6 +29,11 @@ body {
   color: #6a6a6a;
 }
 
+.disabled-link {
+  opacity: 0.7;
+  pointer-events: none;
+}
+
 .navi-item:hover {
   cursor: hand;
   color: black;
