--- a/HelpDesk/staff/templates/manager/CreateWork.html
+++ b/HelpDesk/staff/templates/manager/CreateWork.html
@@ -1,45 +1,52 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phân công công việc</title>
-</head>
-<body>
-    <form action="{% url 'manager:Post_create_work' %}" method="post">
-        {% csrf_token %}
+{% extends 'manager/layout/Base.html' %}
 
-        <label for="name">Tên công việc</label>
-        <input type="text" name="name" id="name" required><br><br>
+{% block title %}Phân công công việc{% endblock %}
 
-        <label for="user">Kỹ thuật viên giải quyết</label>
-        <select name="user" id="user">
-            {% for key, name in user_zip %}
-                <option value="{{ key }}">{{ name }}</option>
-            {% endfor %}
-        </select><br><br>
+{% load static %}
 
-        <label for="deadline">Hạn chót hoàn thành</label>
-        <input type="datetime-local" name="deadline" id="deadline" required><br><br>
+{% block linkHead %}
+    <link rel="stylesheet" href="{% static 'manager/css/TaoCongViec.css' %}">
+{% endblock %}
 
-        <label for="faq">Chọn gợi ý cho kỹ thuật viên</label>
-        <select name="faq" id="faq">
-            <option value="">Chọn FAQ</option>
-            {% for key, question in faq_zip %}
-                <option value="{{ key }}">{{ question }}</option>
-            {% endfor %}
-        </select><br><br>
-        <input type="hidden" name="problem" value="{{ problem_key }}">
+{% block content %}
+    <div class="infoFrame">
+        <form action="{% url 'manager:Post_create_work' %}" method="post">
+            {% csrf_token %}
+            
+            <label for="name">Tên công việc</label><br>
+            <input type="text" name="name" id="name" required><br>
 
-        <input type="submit" value="Tạo công việc" id="createWork">
-    </form>
-</body>
-<script>
-    document.getElementById("createWork").onclick = function() {
-        if (confirm("Bạn sẽ tạo công việc này?")) {
-            return true;
+            <label for="user">Kỹ thuật viên giải quyết</label><br>
+            <select name="user" id="user">
+                {% for key, name in user_zip %}
+                    <option value="{{ key }}">{{ name }}</option>
+                {% endfor %}
+            </select><br>
+
+            <label for="deadline">Hạn chót hoàn thành</label><br>
+            <input type="datetime-local" name="deadline" id="deadline" required><br>
+
+            <label for="faq">Chọn gợi ý cho kỹ thuật viên</label><br>
+            <select name="faq" id="faq">
+                <option value="">Chọn FAQ</option>
+                {% for key, question in faq_zip %}
+                    <option value="{{ key }}">{{ question }}</option>
+                {% endfor %}
+            </select><br>
+            <input type="hidden" name="problem" value="{{ problem_key }}">
+
+            <input type="submit" value="Tạo công việc" id="submitBtn">
+        </form>
+    </div>
+{% endblock %}
+
+{% block script %}
+    <script>
+        document.getElementById("submitBtn").onclick = function() {
+            if (confirm("Bạn sẽ tạo công việc này?")) {
+                return true;
+            }
+            return false;
         }
-        return false;
-    }
-</script>
-</html>
+    </script>
+{% endblock %}
