Thiết kế giao diện mới, đưa được một phần giao diện sang ứng dụng, giao diện bên web vừa xong danh sách sự cố hoàn thành và chưa hoàn thành nhưng chưa hoàn thiện, chưa sửa giao diện danh sách faqs

--- a/Giao dien/css/manager/TaoCongViec.css
+++ b/Giao dien/css/manager/TaoCongViec.css
@@ -29,6 +29,11 @@
     width: 60%;
 }
 
+.infoFrame form select:focus, input:focus {
+    background-color: #e3e3e3;
+    border: 2px solid black;
+}
+
 #submitBtn {
     background-color: #98e6ff;
     padding: 9px 23px;
