--- a/Giao dien/css/manager/TaoFAQ.css
+++ b/Giao dien/css/manager/TaoFAQ.css
@@ -25,6 +25,11 @@
     padding: 7px;
 }
 
+.infoFrame form textarea:focus {
+    background-color: #e3e3e3;
+    border: 2px solid black;
+}
+
 #submitBtn {
     background-color: #98e6ff;
     padding: 11px 46px;
