--- a/Giao dien/css/manager/TrangChu.css
+++ b/Giao dien/css/manager/TrangChu.css
@@ -1,46 +1,81 @@
-.sectionTitle {
-  font-size: 22px;
-  color: #17c1f9;
-}
-
-.problemNotDone {
+.container {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 42px;
+}
+  
+  /* MENU LEFT */
+.menuLeft {
+  flex: 18%;
+  float: left;
+  height: 416px;
+}
+
+.menuLeft .menuItem {
+  display: block;
+  text-decoration: none;
+  padding: 18px 10px;
+  width: 84%;
+}  
+  
+.menuLeft .menuItem:hover {
+  background-color: #e8e8e8;
+}
+
+.menuLeft .menuItemActive {
+  color: red;
+  font-weight: bold;
+  background-color: #ddd;
+}
+
+  /* MAIN CONTENT RIGHT */
+.mainContent {
+  flex: 82%;
+  height: 400px;
+}
+
+.tabContent {
+  display: none;
 }
 
 .problemTable {
-  height: 400px;
-  width: 560px;
+  height: 414px;
+  width: 100%;
   overflow-y: scroll;
   border: 1px solid gray;
-  border-radius: 4px;
 }
 
 .problemTable table {
   border-collapse: collapse;
+  border-color: gray;
+}
+
+.problemTable th, td {
+  border-left-width: 0px;
+  border-right-width: 0px;
+}
+
+.problemTable tr:hover {
+  background-color: #e8e8e8;
 }
 
 .titleTable {
-  background: #58d0f7;
+  background: #61f4fb;
+  font-size: 18px;
 }
 
 .problemTable table .content {
   padding: 3px 8px;
   font-size: 16px;
-  width: 178px;
-  height: 56px;
+  width: auto;
+  height: 59px;
   display: block;
   overflow-y: scroll;
+  border-top-width: 0px;
 }
 
 .problemTable .status {
   padding: 4px 8px;
-}
-
-.problemTable table img {
-  height: 53px;
-  max-width: 85px;
+  text-align: center;
 }
 
 .problemTable table img:hover {
@@ -51,52 +86,31 @@
   padding: 9px 11px;
 }
 
-.functions {
-  width: 158px;
+.problemImage {
+  height: 60px;
+  max-width: 95px;
 }
 
-.dropdown {
+.function img {
+  width: 29px;
+  display: inline-block;
+  margin-left: 23%;
   position: relative;
-  width: 80%;
-  margin: auto;
 }
 
-.dropdownBtn {
-  padding: 8px 10px;
-  display: block;
-  border-radius: 3px;
-  background-color: #cafdf1;
-  box-shadow: 1px 1px 4px 1px gray;
-  text-align: center;
-}
-
-.dropdown:hover .dropdownBtn {
-  background-color: #6dc5e1;
-}
-
-.dropdown:hover .dropdown-content {
+.function:hover .tip {
   display: block;
 }
 
-.dropdown-content {
+.tip {
   display: none;
   position: absolute;
-  z-index: 1;
-}
-
-.content-item {
-  display: block;
-  text-decoration: none;
-  min-width: 100px;
-  background-color: #f0f0f0;
-  font-size: 16px;
-  color: black;
-  padding: 8px 11px;
-  border-bottom: 1px solid gray;
-}
-
-.content-item:hover {
-  background-color: #bfbebe;
+  padding: 4px 6px;
+  background-color: black;
+  opacity: 0.7;
+  color: white;
+  border-radius: 3px;
+  font-size: 14px;
 }
 
 .disabled-link {
@@ -106,67 +120,53 @@
 }
 
 .workTable {
-  margin-left: 34px;;
-  height: 400px;
-  width: 574px;
-  overflow-y: scroll;
-  border: 1px solid gray;
-  border-radius: 4px;
+  width: 90%;
+  height: 90%;
+  border: 1px solid #000;
+  display: none;
+  margin: auto auto 19px auto;
 }
 
 .workTable table {
   border-collapse: collapse;
+  border-color: #eee;
 }
 
 .workTable table th {
   padding: 9px 3px;
-  width: 92px;
 }
 
 .workTable .content {
-  width: 104px;
-  height: 70px;
+  height: 45px;
   display: block;
   overflow-y: scroll;
   padding: 2px 3px;
+  border-width: 0px 0px 1px 0px;
 }
 
 .workTable .userFix {
-  width: 84px;
   padding: 1px 3px;
+  text-align: center;
+}
+
+.workTable .deadline {
+  padding: 1px 3px;
+  text-align: center;
 }
 
 .workTable .status {
   padding: 2px 3px;
-}
-
-.problemDone {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: 63px;
-}
-
-.problemDone .problemTable .content {
-  width: 272px;
-} 
-
-.problemDone .workTable .content {
-  width: 219px;
-}
-
-.problemDone .workTable .userFix {
-  width: 150px;
-}
-
-.problemDone .workTable .deadline {
-  width: 150px;
-  padding: 6px 10px;
+  text-align: center;
 }
 
 #faqTable {
+  overflow-y: scroll;
+  height: 414px;
+}
+
+#faqTable table {
   border-collapse: collapse;
   width: 100%;
-  margin: auto;
 }
 
 #faqTable th {
@@ -184,37 +184,41 @@
 }
 
 #faqTable tr:hover {
-  background-color: #fbeeb3;
+  background-color: #89ff89;
 }
 
 #faqTable td {
-  padding: 2px 4px;
+  padding: 13px 10px;
 }
 
-#faqTable .question {
-  height: 50px;
-  width: 30%;
+  /* MODAL */
+#modalFrame {
+  height: 65%;
+  width: 75%;
+  background-color: #f2f2f2;
+  position: fixed;
+  top: 10%;
+  left: 12%;
+  animation: fadeModal 0.3s;
+  display: none;
+  padding: 60px 0px;
+  overflow-y: scroll;
+  box-shadow: 1px 1px 8px 3px #606060;
 }
 
-#faqTable .answer {
-  height: 50px;
-  width: 50%;
+@keyframes fadeModal {
+  from{top: 6%; opacity: 0.5;}
+  to {top:10%; opacity: 1}
 }
 
-#faqTable .functions {
-  height: 50px;
-  width: 20%;
-  text-align: center;
+#modalClose {
+  font-size: 44px;
+  position: absolute;
+  top: 1%;
+  right: 2%;
 }
 
-#faqTable .function-item {
-  padding: 6px 11px;
-  background-color: #53ff53;
-  text-decoration: none;
-  border-radius: 6px;
-  margin: auto 3px;
-}
-
-#faqTable .function-item:hover {
-  box-shadow: 2px 2px 3px 3px #0ea40e;
+#modalClose:hover {
+  cursor: pointer;
+  font-weight: bold;
 }
