--- a/HelpDesk/staff/static/manager/css/DangNhap.css
+++ b/HelpDesk/staff/static/manager/css/DangNhap.css
@@ -22,6 +22,11 @@ input[type=email], input[type=password] {
   width: 165px;
 }
 
+input:focus {
+  background-color: #e3e3e3;
+  border: 2px solid black;
+}
+
 #loginBtn {
   padding: 10px 15px;
   background-color: #43caea;
